--- a/Kubernates/prac1/depolyment.yaml
+++ b/Kubernates/prac1/depolyment.yaml
@@ -1,10 +1,10 @@
-# --- THE ONLY DEPLOYMENT YOU NEED ---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: student-system
 spec:
-  replicas: 2 # Runs two copies of your app for safety
+  replicas: 2 
   selector:
     matchLabels:
       app: student-app
@@ -15,9 +15,9 @@ spec:
     spec:
       containers:
       - name: flask-container
-        image: heyrohhh/student-flask-app:v2 # The image you pushed to Docker Hub
+        image: heyrohhh/student-flask-app:v2 
         ports:
-        - containerPort: 5000 # Flask's internal port
+        - containerPort: 5000 
 ---
 # --- THE SERVICE TO MAKE IT VISIBLE ---
 apiVersion: v1
@@ -25,10 +25,10 @@ kind: Service
 metadata:
   name: student-service
 spec:
-  type: LoadBalancer # This creates the external IP address
+  type: LoadBalancer
   selector:
     app: student-app
   ports:
     - protocol: TCP
-      port: 80         # You visit the site on port 80 (standard web port)
-      targetPort: 5000 # It sends the traffic to Flask on port 5000
+      port: 80         
+      targetPort: 5000 
