--- a/Kubernates/prac3/deployment.yaml
+++ b/Kubernates/prac3/deployment.yaml
@@ -17,6 +17,25 @@ spec:
           image: heyrohhh/banking-system:v3
           ports:
            - containerPort: 3000
+          imagePullPolicy: always
+          livenessProbe:
+             httpGet:
+                path: /health
+                port: 3000
+             initialDelaySeconds: 30
+             periodSeconds: 10
+          readnessProbe:
+                path: /health
+                port: 3000
+                initialDelaySeconds: 30
+                periodSeconds: 10
+          resources:
+             requests:
+               cpu: 200m
+               memory: 256Mi
+             limits:
+               cpu: 350m
+               memory: 512Mi
 ---
 # ---- Service
 
