--- a/Kubernates/project1/k8s/backend-ingress.yaml
+++ b/Kubernates/project1/k8s/backend-ingress.yaml
@@ -1,28 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: employee-ingress
+  name: backend-ingress
   namespace: employeemanagement
   annotations:
     kubernetes.io/ingress.class: nginx
-    # Yeh line /api ko remove karke backend ko bhejegi
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
   - host: employee.local
     http:
       paths:
-      - path: /api(/|$)(.*)    # Yeh regex hai jo /api ke baad ka part pakadta hai
+      - path: /api(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
           service:
             name: deploymentservice
-            port:
-              number: 80
-      - path: /                # Frontend ke liye simple rakho
-        pathType: Prefix
-        backend:
-          service:
-            name: frontend-service
             port:
               number: 80
