--- a/Kubernates/project1/k8s/frontendeployment.yaml
+++ b/Kubernates/project1/k8s/frontendeployment.yaml
@@ -15,7 +15,8 @@ spec:
     spec:
       containers:
       - name: frontend-container
-        image: heyrohhh/employefrontend:v2
+        image: heyrohhh/employefrontend:v4
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         resources:
